--- a/rsync-local/config.json
+++ b/rsync-local/config.json
@@ -15,7 +15,7 @@
   "homeassistant": "0.115.0",
   "boot": "manual",
   "init":false,
-  #"image": "ghcr.io/poeschl/ha-rsync-local-{arch}",
+  "image": "ghcr.io/poeschl/ha-rsync-local-{arch}",
   "ports": {},
   "ports_description": {},
   "map": [
